1.3.8 (trunk):
* Add `Uri.get_query_param` which returns a list of values associated with a query key.
* Fix ocamldoc in `Uri` module to have a header.

1.3.7 (2013-01-23):
* Add a top-level printer for `Uri.t` that converts it to a string instead
  of just displaying an `<abstract>` type.

1.3.6 (2012-12-29):
* Add `with_host`, `with_port`, `with_fragment` and `with_host`, to modify
  the respective fields of an input URI.

1.3.5 (2012-12-19):
* Fix percent encoding of characters from 0x0 to 0xf.
* Add `Uri.remove_query_param` function to remove keys from query sets.

1.3.4 (2012-11-08):
* Always encode `+` in URLs to be more compatible with form encoding.

1.3.3 (2012-10-14):
* Add singleton variants of query functions that accept a string->string
  instead of a string list of values, for convenience.

1.3.2 (2012-09-20):
* Fix parsing of unreserved characters in hostnames (e.g. `foo-bar.com`).
* Add unit tests for the Uri_services module.
* Various URI parsing bugs and test cases for better RFC3986 compliance.
* Fix `port_of_uri` to detect port overrides in a URI before doing a lookup.

1.3.1 (2012-09-12):
* Make the `Uri_services_full` library optional, as it takes a loooong time
  to compile. It will return as a UNIX binding to getservent(2) also.

1.3.0 (2012-08-24):
* Add `Uri_services` to lookup IANA the common well-known ports and services
* Add `Uri_services_full` with a complete database of the IANA database.

1.2 (2012-08-21):
* Add `Uri.path_and_query` to retrieve a path/query combination string.
* Add `Uri.host_with_default` to retrieve a hostname string.

1.1 (2012-08-02):
* Fix query parsing order.
* Improve safe character handling across URI components.

1.0 (2012-08-01):
* Initial public release.